--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public --port 5050"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
